--- a/Presentation/04-disk.tex
+++ b/Presentation/04-disk.tex
@@ -276,19 +276,17 @@
 \end{frame}
 
 \begin{frame}{Упражнения с mdadm}
-  \begin{block}{Упражнения}
     \begin{enumerate}
-      \item Создать 4 файла по 20Mb из нулей и привязать их к /dev/loop0.. /dev/loop3
+      \item Создать 4 файла по 20Mb из нулей и привязать их к /dev/loop[0-3]
       \item {\tt mdadm --create /dev/md0 --level=mirror --raid-devices=2 /dev/loop0 /dev/loop1}
       \item Создать файловую систему ext3 на /dev/md0. Создать несколько файлов на ней.
       \item {\tt mdadm --detail /dev/md0}
       \item {\tt mdadm --manage /dev/md0 --fault /dev/loop0 } Проверить доступность файловой системы
       \item {\tt mdadm --manage /dev/md0 --add /dev/loop2} Проверить доступность файлов на файловой системе
-      \item {\tt mdadm --manage /dev/md0 --fault /dev/loop1} Проверить доступность файлов
+      \item {\tt mdadm --manage /dev/md0 --fault /dev/loop1} Проверить доступность
       \item Добавить /dev/loop3
       \item {\tt umount /dev/md0; mdadm --stop /dev/md0; mdadm --remove /dev/md0; mdadm --zero-superblock /dev/loop[0-2]}
     \end{enumerate}
-  \end{block}
 \end{frame}
 
 \begin{frame}{LVM -- управление логическими томами}
@@ -314,6 +312,7 @@
         \begin{itemize}
           \item lvcreate
         \end{itemize}
+      \end{columns}
      \item Информация
        \begin{columns}
          \column{0.2\textwidth}
