Fix typo in LVM volume group extend tutorial

--- a/Presentation/04-disk.tex
+++ b/Presentation/04-disk.tex
@@ -421,7 +421,7 @@
 		\pause
     \item  {\tt pvscan; pvmove /dev/loop0; pvscan}
     \item  {\tt vgreduce VG0 /dev/loop0; pvscan}
-    \item  {\tt vgremove /dev/loop0; pvscan}
+    \item  {\tt pvremove /dev/loop0; pvscan}
   \end{enumerate}
 \end{frame}
 
